[package]
name = "repr-size"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ergonomic functions to display a count of bytes to an end user."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ], optional = true }

[features]
serde = ["dep:serde"]